--- a/styles/style.css
+++ b/styles/style.css
@@ -27,12 +27,29 @@ li {
     letter-spacing: 1px;
 }
 
-#main {
+#table {
     margin: 0 auto;
-    width: 900px;
-    height: 140px;
+    width: 1000px;
+    height: 200px;
     background-color: var(--secondary);
     border-radius: 25px;
+}
+
+#account {
+    margin: 0 auto;
+    text-align: center;
+}
+
+#bacheca {
+    
+    margin: 10px auto;
+    width: 1000px;
+    background-color: var(--secondary);
+    border-radius: 25px;
+}
+
+.main {
+    margin: 0 auto;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -54,17 +71,14 @@ img {
     border: 2px solid var(--selected);
 }
 
-/*.song-column,
-.author-column,
-.textarea-column,
-.button-column {
-   align-items: center;
+p {
+    line-height: 0px;
+    height: 0px;
 }
 
-.image-column {
-    
-}*/
-
-.textarea-column {
-    font-family: 'Climate Crisis', sans-serif;
+h3 {
+    line-height: 10px;
+    height: 10px;
+    padding: 10px 0px 0px 0px; 
+    margin: 5px;
 }
